--- a/package.json
+++ b/package.json
@@ -1,28 +1,28 @@
 {
-  "name": "slash-create-vercel-template",
+  "name": "discord.js-v13-example",
   "version": "1.0.0",
-  "description": "A template for slash-create in Vercel",
-  "private": true,
+  "engines": {
+    "node": ">=16.0.0"
+  },
+  "description": "Discord bot for cal3.xyz",
+  "main": "index.js",
+  "author": "Cal3",
   "scripts": {
-    "sync": "slash-up sync",
-    "sync:dev": "slash-up sync -e development",
-    "build": "tsc",
-    "lint": "npx eslint --ext .ts .",
-    "lint:fix": "npx eslint --ext .ts . --fix"
+    "start": "node index.js"
   },
+  "keywords": [],
+  "license": "ISC",
   "dependencies": {
-    "slash-create": "^5.0.3"
+    "discord.js": "^13.3.1",
+    "dotenv": "^10.0.0",
+    "glob": "^7.2.0",
+    "chalk": "^4.1.0",
+    "fs": "^0.0.1-security"
   },
-  "devDependencies": {
-    "@types/node": "^16.7.13",
-    "@typescript-eslint/eslint-plugin": "^4.31.0",
-    "@typescript-eslint/parser": "^4.31.0",
-    "@vercel/node": "^1.12.1",
-    "eslint": "^7.15.0",
-    "eslint-config-prettier": "^7.0.0",
-    "eslint-plugin-prettier": "^3.3.0",
-    "prettier": "^2.2.1",
-    "slash-up": "^1.0.10",
-    "typescript": "^4.4.2"
-  }
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/cal3xyz/cal3-discord-bot.git"
+  },
+  "bugs": "https://github.com/cal3xyz/cal3-discord-bot/issues",
+  "homepage": "https://github.com/cal3xyz/cal3-discord-bot#readme"
 }
