--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,5 +23,6 @@ jobs:
         application_name: Cal3
         environment_name: Cal3-env
         version_label: 12345
+        use_existing_version_if_available: true
         region: us-east-1
         deployment_package: deploy.zip
