--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
   "keywords": [],
   "license": "ISC",
   "dependencies": {
+    "chalk": "^4.1.0",
     "discord.js": "^13.3.1",
     "dotenv": "^10.0.0",
-    "glob": "^7.2.0",
-    "chalk": "^4.1.0",
-    "fs": "^0.0.1-security"
+    "express": "^4.17.3",
+    "fs": "^0.0.1-security",
+    "glob": "^7.2.0"
   },
   "repository": {
     "type": "git",
